Established connection. FE can HTTP GET hardcoded todos

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,19 @@
+# todo hide passwords
+# todo ssl
 server:
   port: 8080
+  #  ssl:
+  #    key-store: classpath:hackaton.p12
+  #    key-store-password: HheHUvXF8kBb
+  #    keyStoreType: PKCS12
+  error:
+    include-stacktrace: never
+    whitelabel:
+      enabled: false
+  compression:
+    enabled: true
+    min-response-size: 512
+    mime-types: application/json
 spring:
   data:
     mongodb:
@@ -11,3 +25,20 @@ spring:
       username: root
       repositories:
         type: reactive
+  main:
+    banner-mode: off
+  jackson:
+    time-zone: Europe/Bratislava
+springdoc:
+  swagger-ui:
+    path: /
+
+logging:
+  level:
+    root: info
+  pattern:
+    console: "%clr(%-5p) %clr{faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n"
+#  file:
+#    name: logs/backend.log
+
+debug: false
