--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <developers>
+        <developer>
+            <name>Yevhenii Kozhevin</name>
+            <organization>Visma</organization>
+        </developer>
+    </developers>
+    <scm>
+        <url>https://github.com/DexLuthor/hackathon</url>
+    </scm>
+
     <groupId>com.github.dexluthor</groupId>
     <artifactId>hackathon</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -14,4 +24,11 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://github.com/DexLuthor/hackathon</url>
+        </repository>
+    </distributionManagement>
 </project>
