--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -36,6 +36,7 @@ springdoc:
 logging:
   level:
     root: info
+    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
   pattern:
     console: "%clr(%-5p) %clr{faint} %clr(---){faint} %clr([%8.15t]){cyan} %clr(%-40.40logger{0}){blue} %clr(:){red} %clr(%m){faint}%n"
 #  file:
