--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -28,7 +28,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: VismaHackathonBackend
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ working.directory }}/target/*.jar'
+          if-no-files-found: error
 
   deploy:
     runs-on: windows-latest
@@ -42,7 +43,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: VismaHackathonBackend
-          path: '${{ github.workspace }}/target/*.jar'
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
