--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -1,10 +1,9 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - Hbackend
 
 on:
   push:
+    paths-ignore:
+      - "frontend"
     branches:
       - ci
   workflow_dispatch:
@@ -22,7 +21,7 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install -f ./backend/pom.xml
+        run: mvn clean install -f ./backend/pom.xml -Pprod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
