--- a/.github/workflows/backend-cicd.yml
+++ b/.github/workflows/backend-cicd.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install -f ./backend/pom.xml -Pprod
+        run: mvn clean install -f ./backend/pom.xml -Pprod -DskipTests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
